tests/paczka1/small_fuzzy/27899810.err
Error in line 1: XJigY S147 140,7
Error in line 9: XJigY S937 95,9
Error in line 11: 2fuchEPF S147 41,1
